# qml_test

./: .gitignore
QML001/: CMakeLists.txt  Main.qml  main.cpp
QML002/: CMakeLists.txt  Main.qml  main.cpp
